# openbox-sdk

./: .dockerignore  .gitattributes  .gitignore  .gitleaks.toml  .gitmodules  .spectral.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  DEFERRED.md  DEV.md  LICENSE  README.md  SECURITY.md  eslint.config.js  package-lock.json  package.json  tsconfig.build.json  tsconfig.json  tsup.config.ts  vitest.config.ts
.claude-hooks/sessions/: S.json
.cursor-hooks/sessions/: C.json  test-conv-1.json  x.json
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: README.md  codegen.yml  pr-governance.yml  pr-quality.yml  pr-security.yml  publish.yml  release-branch.yml  spec-drift.yml  test.yml
apps/approver/: .gitignore  README.md  package.json
apps/approver/src-tauri/: Cargo.toml  tauri.conf.json
apps/approver/src-tauri/capabilities/: default.json
apps/approver/src-tauri/icons/: icon.icns
apps/approver/src-tauri/src/: api.rs  history_window.rs  lib.rs  main.rs  main_window.rs  native_tray.rs  settings.rs  settings_window.rs
apps/bugbot-app/: README.md
apps/cloud-bridge/: README.md  package.json  tsconfig.json
apps/cursor-plugin/: README.md  build.sh
apps/extension/: .gitignore  .vscodeignore  README.md  esbuild.mjs  package.json  tsconfig.json
codegen/: README.md  method-names.json  method-permissions.json
codegen/fixtures/: README.md  boundary-domains.json  cli-auth.json  env-resolution.json  govern-protocol.json  governance-domains.json  provider-capabilities.json  sdk-manifests.json  sdk-targets.json
cursor-agents/: openbox-reviewer.md
cursor-commands/: openbox-check.md  openbox-doctor.md  openbox-list-agents.md  openbox-pending.md  openbox-status.md
cursor-plugin/: README.md  build.sh
cursor-plugin/.cursor-plugin/: marketplace.json  plugin.json
cursor-rules/: openbox.mdc
docs/: clients.md  governance-compliance-harness.md  repo-structure.md  runtime-mcp.md
docs/governance-artifacts/: capability-checklist.csv  capability-checklist.md  summary.csv
docs/migrations/: consumer-shared-mobile.md
docs/proposals/: typed-responses-rollout.md
example/n8n/: .env.example  .env.hosted.example  .env.ipsum.example  README.md  docker-compose.hosted-path-caddy.yml  docker-compose.hosted.yml  docker-compose.ipsum-host-caddy.yml  docker-compose.ipsum.yml  docker-compose.yml  slack-app-manifest.json  slack-app-manifest.yml
python/: .gitignore  README.md  pyproject.toml
python/openbox_sdk/: __init__.py  _govern_runtime.py  _utils.py  clients.py  governance.py  identity.py  redaction.py
python/openbox_sdk/integrations/: copilotkit.py  langgraph.py
python/tests/: test_request_preflight.py  test_runtime.py
rust/: Cargo.toml  build.rs
rust/src/: error.rs  lib.rs  transport.rs  verdict.rs
scripts/: README.md  build-codegen.mjs  check-generated-banners.mjs  check-generated-banners.ts  check-generated-drift.ts  check-local-stack-alignment.mjs  check-publish-safety.sh  check-python-generated-drift.mjs  check-sdks.mjs  clean-generated.mjs  clean.mjs  generate-python-sdk.mjs  install  local-backend-up.sh  local-llamafirewall-server.py  openbox-cli-dev.mjs  openbox-cli-wrapper.sh  record-guardrails-hub.mjs  run-bundle-build.mjs  run-generated-check.mjs  run-isolated-age-unavailable.mjs  run-isolated-guardrail-unavailable.mjs  run-isolated-opa-unavailable.mjs  run-local-ci.mjs  run-local-llamafirewall-e2e.mjs  run-local-stack-lane.mjs  run-quality.mjs  run-root-pipeline.mjs  run-sdk-generation.mjs  run-spec-command.mjs  run-tests.mjs  security-audit.mjs  spec-drift.mjs  spec-drift.ts  start-llamafirewall.mjs  start-local-fe.mjs  sync-package-scripts.mjs  sync-runtime-assets.mjs  sync-runtime-assets.ts  write-governance-checklist.mjs
scripts/lib/: isolated-core-runner.mjs  spec-steps.mjs
skill/: README.md  SKILL.md
skill/evals/: evals.json
skill/references/: backend-api.md  behaviors.md  (+12 more)
specs/: README.md  backend.json  build-defaults.json  core.yaml  span-contract.json
src/: client.ts  core-client.ts  env.ts  index.ts  os-paths.ts  types.ts
tests/: cli-setup.ts  setup-creds.ts  setup.ts
(+765 files in other folders)
