# Cargo workspace root for the Rust side of the openbox-sdk monorepo.
#
# This file makes the repo discoverable to Cargo. JS tooling (npm, the
# JS workspaces in package.json) ignores it. Rust consumers can pin the
# repo by git tag and Cargo will find the `openbox-sdk` package
# inside `rust/` via this workspace declaration:
#
#     [dependencies]
#     openbox-sdk = { git = "https://github.com/OpenBox-AI/openbox-sdk", tag = "v0.1.0-alpha.1" }
#
# Same git ref, same tag, same source spec; TS and Rust SDKs stay in
# lockstep at the language boundary.

[workspace]
members = ["rust"]
resolver = "2"
