[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "openbox-sdk"
version = "0.1.1"
description = "Python SDK for OpenBox AI governance APIs."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [{ name = "OpenBox AI" }]
dependencies = ["cryptography>=42.0.0", "httpx>=0.27.0", "pydantic>=2.7.0"]

[project.optional-dependencies]
langgraph = ["langgraph>=0.2.0", "langchain-core>=0.3.0"]
copilotkit = ["copilotkit>=0.1.0"]
otel = ["opentelemetry-api>=1.25.0"]
dev = [
  "mypy>=1.11.0",
  "pytest>=8.2.0",
  "pytest-asyncio>=0.23.0",
  "pytest-cov>=5.0.0",
  "respx>=0.21.0",
  "ruff>=0.6.0",
]

[project.urls]
Homepage = "https://github.com/OpenBox-AI/openbox-sdk"
Repository = "https://github.com/OpenBox-AI/openbox-sdk"

[tool.hatch.build.targets.wheel]
packages = ["openbox_sdk"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]
addopts = "--cov=openbox_sdk --cov-report=term-missing --cov-fail-under=80"

[tool.coverage.run]
omit = ["openbox_sdk/generated/*"]

[tool.ruff]
line-length = 100
target-version = "py311"
exclude = ["openbox_sdk/generated"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "RUF"]

[tool.mypy]
python_version = "3.11"
strict = true
exclude = ["openbox_sdk/generated"]

[[tool.mypy.overrides]]
module = ["openbox_sdk.generated.*", "respx.*"]
ignore_missing_imports = true
follow_imports = "skip"
