[package]
name = "openbox-approver"
version = "0.1.0"
description = "OpenBox Approval Manager"
authors = ["OpenBox AI"]
edition = "2021"

[lib]
name = "openbox_approver_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# OpenBox SDK is the ONLY HTTP transport. Every endpoint the approver
# hits is a typed wrapper method on `OpenBoxClient`. Token storage,
# env resolution, and X-API-Key validation all come from the SDK;
# the approver no longer hand-rolls any of those. Auth is the
# org-level X-API-Key path; the API key is sourced from the same
# `~/.openbox/tokens` file the `openbox` CLI writes.
openbox-sdk = { path = "../../../rust" }
# Sync→async bridge: the polling thread (mpsc + thread::sleep) is
# sync; the SDK exposes async methods. A single-threaded runtime per
# `ApiClient` lets the polling loop call typed methods via `block_on`
# without restructuring the thread.
tokio = { version = "1", features = ["rt", "macros"] }
notify-rust = "4"
objc2 = "0.6"
block2 = "0.6"
objc2-foundation = { version = "0.3", features = ["NSString", "NSData", "NSGeometry", "NSThread", "NSArray", "NSEnumerator", "NSDate", "NSValue", "NSIndexSet", "NSOperation"] }
objc2-app-kit = { version = "0.3", features = ["NSStatusBar", "NSStatusItem", "NSMenu", "NSMenuItem", "NSImage", "NSButton", "NSControl", "NSView", "NSApplication", "NSRunningApplication", "NSEvent", "NSWindow", "NSResponder", "NSStackView", "NSScrollView", "NSTableView", "NSTableColumn", "NSSearchField", "NSSearchFieldCell", "NSPopUpButton", "NSPopUpButtonCell", "NSSwitch", "NSSegmentedControl", "NSSegmentedCell", "NSImageView", "NSTextField", "NSText", "NSCell", "NSColor", "NSGraphicsContext", "NSAlert", "NSPanel", "NSLayoutConstraint", "NSUserInterfaceItemIdentification"] }
